Коррекция ссылок на страницы

--- a/html/posts.html
+++ b/html/posts.html
@@ -150,13 +150,13 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="./html/about.html">О компании</a></li>
-                    <li><a href="./html/about.html">Услуги</a></li>
-                    <li><a href="./html/about.html">Наши работы</a></li>
-                    <li><a href="./html/about.html">Сервис</a></li>
-                    <li><a href="./html/about.html">Комплексные решения</a></li>
-                    <li><a href="./html/about.html">Статьи и новости</a></li>
-                    <li><a href="./html/about.html">Контакты</a></li>
+                    <li><a href="../html/about.html">О компании</a></li>
+                    <li><a href="../html/features.html">Услуги</a></li>
+                    <li><a href="../html/works.html">Наши работы</a></li>
+                    <li><a href="../html/services.html">Сервис</a></li>
+                    <li><a href="../html/complex.html">Комплексные решения</a></li>
+                    <li><a href="../html/posts.html">Статьи и новости</a></li>
+                    <li><a href="../html/about.html">Контакты</a></li>
                 </ul>
             </nav>
             <div>
