--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Promomix</title>
+    <link rel="stylesheet" href="./css/modern-normalize.css">
+    <link rel="stylesheet" href="./font/stylesheet.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <a href="">promomix</a>
-        <nav>
-            <ul>
-                <li><button type="button">поиск</button></li>
-                <li><a href="tel:84964290900">8 496 429 09 00</a></li>
-                <li><button type="button">оставить заявку</button></li>
+    <header class="header" id="header">
+        <nav class="navigation container">
+            <a class="logo" href="./index.html"> <img src="./image/items/logo.svg" alt=""></a>
+            <ul class="list">
+                <li class="list-item"><img src="./image/items/Vector.svg" alt="" width="16px" height="16px"><button type="button">поиск</button></li>
+                <li class="list-item"><a href="tel:84964290900">8 496 429 09 00</a></li>
+                <li class="list-item"><button type="button">оставить заявку</button></li>
             </ul>
         </nav>
     </header>
@@ -24,17 +27,17 @@
             рекламное агентство<br>
             полного цикла
         </h1>
-            <ul>
+            <ul class="list">
                 <li><a href="/">Facebook</a></li>
                 <li><a href="/">Vkontakte</a></li>
                 <li><a href="/">Instagram</a></li>
             </ul>
     </section>
     <!-- Ключевые направления< -->
-    <section>
+    <section class="">
         <p>услуги</p>
         <h2>Ключевые направления</h2>
-        <ul>
+        <ul class="list">
             <li><a href=""> <img src="./image/directions/image1.svg" width="55" alt=""> Наружная реклама</a>
             </li>
             <li><a href=""> <img src="./image/directions/image2.svg" width="55" alt=""> Широкоформатная печать</a>
@@ -59,7 +62,7 @@
         <h2>Создаем рекламу
             и формируем имидж
             компаний</h2>
-            <ul>
+            <ul class="list">
                 <li>
                     <p>18+</p>
                     <p>лет опыта на
@@ -86,7 +89,7 @@
     <section>
         <p>наши работы</p>
         <h2>Воплощаем идеи</h2>
-        <ul>
+        <ul class="list">
             <li>
                 <div>
                     <img src="./image/works/image1.jpg" width="570" height="370" alt="img">
@@ -137,7 +140,7 @@
         <p>Наши партнёры</p>
         <h2>400+ компаний
             доверяют нам</h2>
-        <ul>
+        <ul class="list">
             <li>
                 <a href="">
                 <img src="./image/logo/puma.svg" width="124" height="64" alt="Puma">
@@ -189,7 +192,7 @@
     <section>
         <p>статьи и новости</p>
         <h2>Все самое интересное</h2>
-        <ul>
+        <ul class="list">
             <li>
                 <p>Новость</p>
                 <div>
@@ -240,7 +243,7 @@
                 <button type="button">Оставить заявку</button>
             </div>
             <nav>
-                <ul>
+                <ul class="list">
                     <li><a href="./html/about.html">О компании</a></li>
                     <li><a href="./html/about.html">Услуги</a></li>
                     <li><a href="./html/works.html">Наши работы</a></li>
