--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
     </header>
     <main>
     <!-- Герой -->
-    <section>
-        <h1>Promomix – <br>
-            рекламное агентство<br>
-            полного цикла
-        </h1>
-            <ul class="list">
-                <li><a href="/">Facebook</a></li>
-                <li><a href="/">Vkontakte</a></li>
-                <li><a href="/">Instagram</a></li>
+    <section class="hero">
+        <div class="container">
+            <h1> <span>Promomix – </span><br>
+                рекламное агентство<br>
+                полного цикла
+            </h1>
+            <ul class="social-list list">
+                <li class="list-item"><a href="/">Facebook</a></li>
+                <li class="list-item"><a href="/">Vkontakte</a></li>
+                <li class="list-item"><a href="/">Instagram</a></li>
             </ul>
+        </div>
     </section>
     <!-- Ключевые направления< -->
     <section class="">
