--- a/index.html
+++ b/index.html
@@ -10,11 +10,22 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header class="header" id="header">
+    <header class="header">
         <nav class="navigation container">
-            <a class="logo" href="./index.html"> <img src="./image/items/logo.svg" alt=""></a>
+            <a class="logo" href="./index.html"> 
+                <svg width="164" height="20">
+                    <use href="../image/items/icons.svg#promomix"></use>
+                </svg>
+            </a>
             <ul class="list">
-                <li class="list-item"><img src="./image/items/Vector.svg" alt="" width="16px" height="16px"><button type="button">поиск</button></li>
+                <li class="list-item">
+                    <svg class="icon-header" width="16" height="16">
+                        <use href="../image/items/icons.svg#lupa"></use>
+                    </svg>
+                    <button type="button">
+                        поиск
+                    </button>
+                </li>
                 <li class="list-item"><a href="tel:84964290900">8 496 429 09 00</a></li>
                 <li class="list-item"><button type="button">оставить заявку</button></li>
             </ul>
@@ -22,10 +33,10 @@
     </header>
     <main>
     <!-- Герой -->
-    <section class="hero">
+    <section class="section hero">
         <div class="container">
-            <h1> <span>Promomix – </span><br>
-                рекламное агентство<br>
+            <h1> <span>Promomix – </span> <br>
+                рекламное агентство <br>
                 полного цикла
             </h1>
             <ul class="social-list list">
@@ -36,59 +47,120 @@
         </div>
     </section>
     <!-- Ключевые направления< -->
-    <section class="">
-        <p>услуги</p>
-        <h2>Ключевые направления</h2>
-        <ul class="list">
-            <li><a href=""> <img src="./image/directions/image1.svg" width="55" alt=""> Наружная реклама</a>
-            </li>
-            <li><a href=""> <img src="./image/directions/image2.svg" width="55" alt=""> Широкоформатная печать</a>
-            </li>
-            <li><a href=""> <img src="./image/directions/image3.svg" width="55" alt=""> Рекламная полиграфия</a>
-            </li>
-            <li><a href=""> <img src="./image/directions/image4.svg" width="55" alt=""> Сувенирная продукция</a>
-            </li>
-            <li><a href=""> <img src="./image/directions/image5.svg" width="55" alt=""> Внутренняя реклама</a>
-            </li>
-            <li><a href=""> <img src="./image/directions/image7.svg" width="55" alt=""> Брендирование одежды</a>
-            </li>
-            <li><a href=""> <img src="./image/directions/image8.svg" width="55" alt=""> Брендирование транспорта</a>
-            </li>
-            <li><a href=""> <img src="./image/directions/image9.svg" width="55" alt=""> Все услуги</a>
-            </li>
-        </ul>
-    </section>
-    <!-- Наши преимущества -->
-    <section>
-        <p>Наши преимущества</p>
-        <h2>Создаем рекламу
-            и формируем имидж
-            компаний</h2>
-            <ul class="list">
-                <li>
-                    <p>18+</p>
-                    <p>лет опыта на
-                    рекламном рынке</p>
+    <section class="section">
+        <div class="container directions">
+            <p>услуги</p>
+            <h2>Ключевые <span>направления</span></h2>
+            <ul class="list directions-list">
+                <li class="directions-items">
+                    <a class="directions-icons" href="">
+                    <svg  width="55" height="55">
+                        <use href="../image/items/icons.svg#icon-1"></use>
+                    </svg> 
+                    Наружная реклама
+                    </a>
                 </li>
-                <li>
-                    <p>250+</p>
-                    <p>реализованных
-                    проектов</p>
+                <li class="directions-items">
+                    <a class="directions-icons" href="">
+                    <svg width="55" height="47">
+                        <use href="../image/items/icons.svg#icon-2"></use>
+                    </svg> 
+                    Широкоформатная печать
+                    </a>
                 </li>
-                <li>
-                    <p>37</p>
-                <p>квалифицированных
-                    сотрудников</p>
+                <li class="directions-items">
+                    <a class="directions-icons" href="">
+                    <svg width="55" height="55">
+                        <use href="../image/items/icons.svg#icon-3"></use>
+                    </svg> 
+                    Рекламная полиграфия
+                    </a>
                 </li>
-                <li>
-                    <p>14+</p>
-                    <p>профессионального
-                    оборудования</p>
+                <li class="directions-items">
+                    <a class="directions-icons" href="">
+                    <svg width="55" height="52">
+                        <use href="../image/items/icons.svg#icon-4"></use>
+                    </svg> 
+                    Сувенирная продукция
+                    </a>
+                </li>
+                <li class="directions-items">
+                    <a class="directions-icons" href="">
+                    <svg width="55" height="50">
+                        <use href="../image/items/icons.svg#icon-5"></use>
+                    </svg> 
+                    Внутренняя реклама
+                    </a>
+                </li>
+                <li class="directions-items">
+                    <a class="directions-icons" href="">
+                    <svg width="58" height="53">
+                        <use href="../image/items/icons.svg#icon-7"></use>
+                    </svg> 
+                    Брендирование одежды
+                    </a>
+                </li>
+                <li class="directions-items">
+                    <a class="directions-icons" href="">
+                    <svg width="55" height="55">
+                        <use href="../image/items/icons.svg#icon-8"></use>
+                    </svg> 
+                    Брендирование транспорта
+                    </a>
+                </li>
+                <li class="directions-items">
+                    <a class="directions-icons" href="">
+                    <svg width="50" height="40">
+                        <use href="../image/items/icons.svg#icon-9"></use>
+                    </svg> 
+                    Все услуги
+                    </a>
                 </li>
             </ul>
+        </div>
+    </section>
+    <!-- Наши преимущества -->
+    <section class="section bg-page">
+        <div class="container advantages">
+            <div class="advantages-title">
+                <p>Наши преимущества</p>
+                <h2><span>Создаем рекламу</span>
+                    и формируем имидж
+                    компаний
+                </h2>
+            </div>
+            <div class="advantages-list">
+                <ul class="list">
+                    <li class="advantages-list-item">
+                        <span>18+</span>
+                        <p>
+                            лет опыта на рекламном рынке
+                        </p>
+                    </li>
+                    <li class="advantages-list-item">
+                        <span>250+</span>
+                        <p>
+                            реализованных проектов
+                        </p>
+                    </li>
+                    <li class="advantages-list-item">
+                        <span>37</span>
+                        <p>
+                        квалифицированных сотрудников
+                        </p>
+                    </li>
+                    <li class="advantages-list-item">
+                        <span>14+</span>
+                        <p>
+                            профессионального оборудования
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </section>
     <!-- Воплощяем идеи -->
-    <section>
+    <section class="section">
         <p>наши работы</p>
         <h2>Воплощаем идеи</h2>
         <ul class="list">
@@ -138,7 +210,7 @@
         <button type="button">все работы</button>
     </section>
     <!-- Компании -->
-    <section>
+    <section class="section">
         <p>Наши партнёры</p>
         <h2>400+ компаний
             доверяют нам</h2>
@@ -191,7 +263,7 @@
         </ul>
     </section>
     <!-- Все самое интересное -->
-    <section>
+    <section class="section">
         <p>статьи и новости</p>
         <h2>Все самое интересное</h2>
         <ul class="list">
