--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                         поиск
                     </button>
                 </li>
-                <li class="list-item"><a href="tel:84964290900">8 496 429 09 00</a></li>
-                <li class="list-item"><button type="button">оставить заявку</button></li>
+                <li class="list-item-header"><a href="tel:84964290900">8 496 429 09 00</a></li>
+                <li class="list-item-header"><button type="button">оставить заявку</button></li>
             </ul>
         </nav>
     </header>
@@ -35,7 +35,7 @@
     <!-- Герой -->
     <section class="section hero">
         <div class="container">
-            <h1> <span>Promomix – </span> <br>
+            <h1> <span class="text-title-color">Promomix – </span> <br>
                 рекламное агентство <br>
                 полного цикла
             </h1>
@@ -49,8 +49,8 @@
     <!-- Ключевые направления< -->
     <section class="section">
         <div class="container directions">
-            <p>услуги</p>
-            <h2>Ключевые <span>направления</span></h2>
+            <p class="paragraph-page">услуги</p>
+            <h2 class="title-page">Ключевые <span class="text-title-color">направления</span></h2>
             <ul class="list directions-list">
                 <li class="directions-items">
                     <a class="directions-icons" href="">
@@ -123,8 +123,8 @@
     <section class="section bg-page">
         <div class="container advantages">
             <div class="advantages-title">
-                <p>Наши преимущества</p>
-                <h2><span>Создаем рекламу</span>
+                <p class="paragraph-page">Наши преимущества</p>
+                <h2 class="title-page"><span class="text-title-color">Создаем рекламу</span>
                     и формируем имидж
                     компаний
                 </h2>
@@ -132,25 +132,29 @@
             <div class="advantages-list">
                 <ul class="list">
                     <li class="advantages-list-item">
-                        <span>18+</span>
+                        <span class="text-title-color">18+</span>
+                        <div></div>
                         <p>
                             лет опыта на рекламном рынке
                         </p>
                     </li>
                     <li class="advantages-list-item">
-                        <span>250+</span>
+                        <span class="text-title-color">250+</span>
+                        <div></div>
                         <p>
                             реализованных проектов
                         </p>
                     </li>
                     <li class="advantages-list-item">
-                        <span>37</span>
+                        <span class="text-title-color">37</span>
+                        <div></div>
                         <p>
                         квалифицированных сотрудников
                         </p>
                     </li>
                     <li class="advantages-list-item">
-                        <span>14+</span>
+                        <span class="text-title-color">14+</span>
+                        <div></div>
                         <p>
                             профессионального оборудования
                         </p>
@@ -161,150 +165,152 @@
     </section>
     <!-- Воплощяем идеи -->
     <section class="section">
-        <p>наши работы</p>
-        <h2>Воплощаем идеи</h2>
-        <ul class="list">
-            <li>
-                <div>
-                    <img src="./image/works/image1.jpg" width="570" height="370" alt="img">
-                </div>
-                <h3>Кафе Starbucks Coffee</h3>
-                <p>Вывеска объемная</p>
-            </li>
-            <li>
-                <div>
-                    <img src="./image/works/image7.jpg" width="570" height="570" alt="img">
-                </div>
-                <h3>Bio бутик Flora</h3>
-                <p>наружная реклама</p>
-            </li>
-            <li>
-                <div>
-                    <img src="./image/works/image2.jpg" width="570" height="370" alt="img">
-                </div>
-                <h3>Сеть ресторанов Emosi</h3>
-                <p>Вывеска объемная</p>
-            </li>
-            <li>
-                <div>
-                    <img src="./image/works/image5.jpg" width="570" height="570" alt="img">
-                </div>
-                <h3>Бизнес центр Sierra</h3>
-                <p>ФИРМЕННЫЙ СТИЛЬ</p>
-            </li>
-            <li>
-                <div>
-                    <img src="./image/works/image3.jpg" width="570" height="370" alt="img">
-                </div>
-                <h3>Релакс студия Flora</h3>
-                <p>ФИРМЕННЫЙ СТИЛЬ</p>
-            </li>
-            <li>
-                <div>
-                    <img src="./image/works/image4.jpg" width="570" height="570" alt="img">
-                </div>
-                <h3>Магазин Levi's</h3>
-                <p>Входная группа и вывеска</p>
-            </li>
-        </ul>
-        <button type="button">все работы</button>
+        <div class="container container-idea">
+            <p class="paragraph-page">наши работы</p>
+            <h2 class="title-page ">Воплощаем <span class="text-title-color">идеи</span> </h2>
+            <ul class="list">
+                <li class="list-item-idea">
+                    <a href="">
+                        <img src="./image/works/image1.jpg" width="570" height="370" alt="img">
+                        <h3>Кафе Starbucks Coffee</h3>
+                        <p>Вывеска объемная</p>
+                    </a>
+                </li>
+                <li class="list-item-idea">
+                    <a href="">    
+                        <img src="./image/works/image7.jpg" width="570" height="570" alt="img">
+                        <h3>Bio бутик Flora</h3>
+                        <p>наружная реклама</p>
+                    </a>
+                </li>
+                <li class="list-item-idea">
+                    <a href="">    
+                        <img src="./image/works/image2.jpg" width="570" height="570" alt="img">
+                        <h3>Сеть ресторанов Emosi</h3>
+                        <p>Вывеска объемная</p>
+                    </a>
+                </li>
+                <li class="list-item-idea">
+                    <a href="">    
+                        <img src="./image/works/image5.jpg" width="570" height="370" alt="img">
+                        <h3>Бизнес центр Sierra</h3>
+                        <p>ФИРМЕННЫЙ СТИЛЬ</p>
+                    </a>
+                </li>
+                <li class="list-item-idea">
+                    <a href="">    
+                        <img src="./image/works/image3.jpg" width="570" height="370" alt="img">
+                        <h3>Релакс студия Flora</h3>
+                        <p>ФИРМЕННЫЙ СТИЛЬ</p>
+                    </a>
+                </li>
+                <li class="list-item-idea">
+                    <a href="">    
+                        <img src="./image/works/image4.jpg" width="570" height="570" alt="img">
+                        <h3>Магазин Levi's</h3>
+                        <p>Входная группа и вывеска</p>
+                    </a>
+                </li>
+            </ul>
+            <a class="link-icon-idea" href="">
+                <img class="icon-idea" src="./image/items/plus.png" alt="">
+                <span></span>
+                Все работы
+            </a>
+        </div>
     </section>
     <!-- Компании -->
-    <section class="section">
-        <p>Наши партнёры</p>
-        <h2>400+ компаний
-            доверяют нам</h2>
-        <ul class="list">
-            <li>
-                <a href="">
-                <img src="./image/logo/puma.svg" width="124" height="64" alt="Puma">
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./image/logo/tinkof.svg" width="124" height="64" alt="Тинькофф">
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./image/logo/ashan.svg" width="124" height="64" alt="Ашан">
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./image/logo/lukoil.svg" width="124" height="64" alt="Lukoil">
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./image/logo/nike.svg" width="124" height="64" alt="Nike">
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./image/logo/zara.svg" width="124" height="64" alt="Zara">
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./image/logo/adidas.svg" width="124" height="64" alt="Adidas">
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./image/logo/ostin.svg" width="124" height="64" alt="Ostin">
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./image/logo/gazprom.svg" width="124" height="64" alt="Газпром">
-                </a>
-            </li>
-        </ul>
+    <section class="section bg-page">
+        <div class="container container-company">
+            <div class="company-edit">
+                <p class="paragraph-page">Наши партнёры</p>
+                <h2 class="title-page">
+                    <span class="text-title-color">400+</span> 
+                    компаний доверяют нам
+                </h2>
+            </div>
+            <div class="company-edit-list">
+                <ul class="list">
+                    <li class="list-item">
+                        <img src="./image/logo/puma.svg" width="124" height="64" alt="Puma">
+                    </li>
+                    <li class="list-item">
+                        <img src="./image/logo/tinkof.svg" width="124" height="64" alt="Тинькофф">
+                    </li>
+                    <li class="list-item">
+                        <img src="./image/logo/ashan.svg" width="124" height="64" alt="Ашан">
+                    </li>
+                    <li class="list-item">
+                        <img src="./image/logo/lukoil.svg" width="124" height="64" alt="Lukoil">
+                    </li>
+                    <li class="list-item">
+                        <img src="./image/logo/nike.svg" width="124" height="64" alt="Nike">
+                    </li>
+                    <li class="list-item">
+                        <img src="./image/logo/zara.svg" width="124" height="64" alt="Zara">
+                    </li>
+                    <li class="list-item">
+                        <img src="./image/logo/adidas.svg" width="124" height="64" alt="Adidas">
+                    </li>
+                    <li class="list-item">
+                        <img src="./image/logo/ostin.svg" width="124" height="64" alt="Ostin">
+                    </li>
+                    <li class="list-item">
+                        <img src="./image/logo/gazprom.svg" width="124" height="64" alt="Газпром">
+                    </li>
+                </ul>
+            </div>
+        </div>
     </section>
     <!-- Все самое интересное -->
     <section class="section">
-        <p>статьи и новости</p>
-        <h2>Все самое интересное</h2>
-        <ul class="list">
-            <li>
-                <p>Новость</p>
-                <div>
-                    <img src="./image/interesting/image1.jpg" width="420" height="236" alt="">
-                </div>
-                <div>
-                    <p>21. 03. 2020</p>
-                    <h3>Уникальная услуга «вывеска в аренду»</h3>
-                    <p>У владельца любого малого, но успешно развивающегося бизнеса рано или поздно возникает необходимость в дополнительной визуальной рекламе.</p>
-                    <button type="button">Подробнее</button>
-                </div>
-            </li>
-            <li>
-                <p>Статья</p>
-                <div>
-                    <img src="./image/interesting/image2.jpg" width="420" height="236" alt="">
-                </div>
-                <div>
-                    <p>21. 03. 2020</p>
-                    <h3>Лайфхаки полиграфии от заказчиков</h3>
-                    <p>Лайфхаки полиграфии от опытных заказчиков. Сегодня услуги по печати рекламных материалов, кажется, не предоставляет только ленивый.  Так как предложений очень много, то, соответственно и достаточно высок.</p>
-                    <button type="button">Подробнее</button>
-                </div>
-            </li>
-            <li>
-                <p>Статья</p>
-                <div>
-                    <img src="./image/interesting/image3.jpg" width="420" height="236" alt="">
-                </div>
-                <div>
-                    <p>21. 03. 2020</p>
-                    <h3>Полиграфия для бизнеса</h3>
-                    <p>Чтобы выделиться среди конкурентов на современном рынке товаров и услуг, или познакомить как можно большее количество людей с новым предприятием, нужна эффективная реклама. </p>
-                    <button type="button">Подробнее</button>
-                </div>
-            </li>
-        </ul>
-        <a href="">Все статьи</a>
+        <div class="container intresting">
+            <p class="paragraph-page">статьи и новости</p>
+            <h2 class="title-page">Все самое <span class="text-title-color">интересное</span></h2>
+            <ul class="list list-intresting">
+                <li class="list-item">
+                    <p class="intresting-paragraph">Новость</p>
+                    <div class="intresting-image">                        
+                        <img src="./image/interesting/image1.jpg" width="420" height="236" alt="">
+                    </div>
+                    <div class="intresting-main">
+                        <p class="intresting-paragraph">21. 03. 2020</p>
+                        <h3>Уникальная услуга «вывеска в аренду»</h3>
+                        <p>У владельца любого малого, но успешно развивающегося бизнеса рано или поздно возникает необходимость в дополнительной визуальной рекламе.</p>
+                        <button type="button">Подробнее</button>
+                    </div>
+                </li>
+                <li class="list-item">
+                    <p class="intresting-paragraph">Статья</p>
+                    <div class="intresting-image">
+                        <img src="./image/interesting/image2.jpg" width="420" height="236" alt="">
+                    </div>
+                    <div class="intresting-main">
+                        <p class="intresting-paragraph">21. 03. 2020</p>
+                        <h3>Лайфхаки полиграфии от заказчиков</h3>
+                        <p>Лайфхаки полиграфии от опытных заказчиков. Сегодня услуги по печати рекламных материалов, кажется, не предоставляет только ленивый.  Так как предложений очень много, то, соответственно и достаточно высок.</p>
+                        <button type="button">Подробнее</button>
+                    </div>
+                </li>
+                <li class="list-item">
+                    <p class="intresting-paragraph">Статья</p>
+                    <div class="intresting-image">
+                        <img src="./image/interesting/image3.jpg" width="420" height="236" alt="">
+                    </div>
+                    <div class="intresting-main">
+                        <p class="intresting-paragraph">21. 03. 2020</p>
+                        <h3>Полиграфия для бизнеса</h3>
+                        <p>Чтобы выделиться среди конкурентов на современном рынке товаров и услуг, или познакомить как можно большее количество людей с новым предприятием, нужна эффективная реклама. </p>
+                        <button type="button">Подробнее</button>
+                    </div>
+                </li>
+            </ul>
+                <a class="link-icon-idea" href="">
+                    <img class="icon-idea" src="./image/items/plus.png" alt="">
+                    <span></span>
+                    Все работы
+                </a>
+        </div>
     </section>
     </main>
     <footer>
