создание разметки секции Самое интересное

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
             </a>
             <ul class="list">
                 <li class="list-item">
-                    <svg class="icon-header" width="16" height="16">
+                    <svg class="icon-header" width="16" height="56">
                         <use href="../image/items/icons.svg#lupa"></use>
                     </svg>
                     <button type="button">
                         поиск
                     </button>
                 </li>
-                <li class="list-item-header"><a href="tel:84964290900">8 496 429 09 00</a></li>
-                <li class="list-item-header"><button type="button">оставить заявку</button></li>
+                <li class="list-item"><a href="tel:84964290900">8 496 429 09 00</a></li>
+                <li class="list-item"><button type="button">оставить заявку</button></li>
             </ul>
         </nav>
     </header>
@@ -269,37 +269,40 @@
             <h2 class="title-page">Все самое <span class="text-title-color">интересное</span></h2>
             <ul class="list list-intresting">
                 <li class="list-item">
-                    <p class="intresting-paragraph">Новость</p>
-                    <div class="intresting-image">                        
+                    <div class="intresting-image">
+                        <p class="intresting-paragraph">Новость</p>                        
                         <img src="./image/interesting/image1.jpg" width="420" height="236" alt="">
                     </div>
                     <div class="intresting-main">
-                        <p class="intresting-paragraph">21. 03. 2020</p>
-                        <h3>Уникальная услуга «вывеска в аренду»</h3>
-                        <p>У владельца любого малого, но успешно развивающегося бизнеса рано или поздно возникает необходимость в дополнительной визуальной рекламе.</p>
-                        <button type="button">Подробнее</button>
+                        <a class="intresting-link" href="">
+                            <p class="intresting-paragraph">21. 03. 2020</p>
+                            <h3 class="title-page">Уникальная услуга «вывеска в аренду»</h3>
+                            <p class="intresting-text">У владельца любого малого, но успешно развивающегося бизнеса рано или поздно возникает необходимость в дополнительной визуальной рекламе.</p>
+                            <img src="./image/items/Group.png" alt=""> 
+                                <span class="intresting-text-link">Подробнее</span>
+                        </a>
                     </div>
                 </li>
                 <li class="list-item">
-                    <p class="intresting-paragraph">Статья</p>
                     <div class="intresting-image">
+                        <p class="paragraph-page">Статья</p>
                         <img src="./image/interesting/image2.jpg" width="420" height="236" alt="">
                     </div>
                     <div class="intresting-main">
-                        <p class="intresting-paragraph">21. 03. 2020</p>
-                        <h3>Лайфхаки полиграфии от заказчиков</h3>
+                        <p class="paragraph-page">21. 03. 2020</p>
+                        <h3 class="title-page">Лайфхаки полиграфии от заказчиков</h3>
                         <p>Лайфхаки полиграфии от опытных заказчиков. Сегодня услуги по печати рекламных материалов, кажется, не предоставляет только ленивый.  Так как предложений очень много, то, соответственно и достаточно высок.</p>
                         <button type="button">Подробнее</button>
                     </div>
                 </li>
                 <li class="list-item">
-                    <p class="intresting-paragraph">Статья</p>
                     <div class="intresting-image">
+                        <p class="paragraph-page">Статья</p>
                         <img src="./image/interesting/image3.jpg" width="420" height="236" alt="">
                     </div>
                     <div class="intresting-main">
-                        <p class="intresting-paragraph">21. 03. 2020</p>
-                        <h3>Полиграфия для бизнеса</h3>
+                        <p class="paragraph-page">21. 03. 2020</p>
+                        <h3 class="title-page">Полиграфия для бизнеса</h3>
                         <p>Чтобы выделиться среди конкурентов на современном рынке товаров и услуг, или познакомить как можно большее количество людей с новым предприятием, нужна эффективная реклама. </p>
                         <button type="button">Подробнее</button>
                     </div>
