--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                             <p class="intresting-paragraph">21. 03. 2020</p>
                             <h3 class="title-page">Уникальная услуга «вывеска в аренду»</h3>
                             <p class="intresting-text">У владельца любого малого, но успешно развивающегося бизнеса рано или поздно возникает необходимость в дополнительной визуальной рекламе.</p>
-                            <img src="./image/items/Group.png" alt=""> 
+                                <img src="./image/items/arrow.png" alt=""> 
                                 <span class="intresting-text-link">Подробнее</span>
                         </a>
                     </div>
@@ -289,10 +289,13 @@
                         <img src="./image/interesting/image2.jpg" width="420" height="236" alt="">
                     </div>
                     <div class="intresting-main">
-                        <p class="paragraph-page">21. 03. 2020</p>
-                        <h3 class="title-page">Лайфхаки полиграфии от заказчиков</h3>
-                        <p>Лайфхаки полиграфии от опытных заказчиков. Сегодня услуги по печати рекламных материалов, кажется, не предоставляет только ленивый.  Так как предложений очень много, то, соответственно и достаточно высок.</p>
-                        <button type="button">Подробнее</button>
+                        <a class="intresting-link" href="">
+                            <p class="intresting-paragraph">21. 03. 2020</p>
+                            <h3 class="title-page">Лайфхаки полиграфии от заказчиков</h3>
+                            <p class="intresting-text">Лайфхаки полиграфии от опытных заказчиков. Сегодня услуги по печати рекламных материалов, кажется, не предоставляет только ленивый.  Так как предложений очень много, то, соответственно и достаточно высок.</p>
+                                <img src="./image/items/arrow.png" alt=""> 
+                                <span class="intresting-text-link">Подробнее</span>
+                        </a>
                     </div>
                 </li>
                 <li class="list-item">
@@ -301,10 +304,13 @@
                         <img src="./image/interesting/image3.jpg" width="420" height="236" alt="">
                     </div>
                     <div class="intresting-main">
-                        <p class="paragraph-page">21. 03. 2020</p>
-                        <h3 class="title-page">Полиграфия для бизнеса</h3>
-                        <p>Чтобы выделиться среди конкурентов на современном рынке товаров и услуг, или познакомить как можно большее количество людей с новым предприятием, нужна эффективная реклама. </p>
-                        <button type="button">Подробнее</button>
+                        <a class="intresting-link" href="">
+                            <p class="intresting-paragraph">21. 03. 2020</p>
+                            <h3 class="title-page">Полиграфия для бизнеса</h3>
+                            <p class="intresting-text">Чтобы выделиться среди конкурентов на современном рынке товаров и услуг, или познакомить как можно большее количество людей с новым предприятием, нужна эффективная реклама. </p>
+                                <img src="./image/items/arrow.png" alt=""> 
+                                <span class="intresting-text-link">Подробнее</span>
+                        </a>
                     </div>
                 </li>
             </ul>
@@ -317,40 +323,43 @@
     </section>
     </main>
     <footer>
-        <div>
-            <div>
-                <a href="">Promomix –
-                    рекламное агентство
+        <div class="container container-footer bg-page">
+            <div class="footer-link">
+                <a class="link-title-footer" href="">
+                    <span class="text-title-color">Promomix –</span> <br>
+                    рекламное агентство <br>
                     полного цикла
                 </a>
                 <button type="button">Оставить заявку</button>
             </div>
-            <nav>
-                <ul class="list">
-                    <li><a href="./html/about.html">О компании</a></li>
-                    <li><a href="./html/about.html">Услуги</a></li>
-                    <li><a href="./html/works.html">Наши работы</a></li>
-                    <li><a href="./html/services.html">Сервис</a></li>
-                    <li><a href="./html/complex.html">Комплексные решения</a></li>
-                    <li><a href="./html/posts.html">Статьи и новости</a></li>
-                    <li><a href="./html/about.html">Контакты</a></li>
-                </ul>
-            </nav>
-            <div>
-                <p>Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
-                <form>
-                    <input type="email" placeholder="ваш e-mail">
-                    <!-- <input type="submit" placeholder="&#8594;"> -->
-                    <button type="submit">&#8594;</button>
-                </form>
+            <div class="footer-main">
+                <nav class="navi-footer">
+                    <ul class="list">
+                        <li><a href="./html/about.html">О компании</a></li>
+                        <li><a href="./html/about.html">Услуги</a></li>
+                        <li><a href="./html/works.html">Наши работы</a></li>
+                        <li><a href="./html/services.html">Сервис</a></li>
+                        <li><a href="./html/complex.html">Комплексные решения</a></li>
+                        <li><a href="./html/posts.html">Статьи и новости</a></li>
+                        <li><a href="./html/about.html">Контакты</a></li>
+                    </ul>
+                </nav>
+                <div class="footer-form">
+                    <p>Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
+                    <form>
+                        <input type="email" placeholder="ваш e-mail">
+                        <!-- <input type="submit" placeholder="&#8594;"> -->
+                        <button type="submit">&#8594;</button>
+                    </form>
+                </div>
             </div>
         </div>
-        <div>
+        <div class="container social-link">
             <p>&copy; 2011 - 2020 Promomix</p>
-            <ul>
-                <li><a href="/">Facebook</a></li>
-                <li><a href="/">Vkontakte</a></li>
-                <li><a href="/">Instagram</a></li>
+            <ul class="footer-social-link">
+                <li class="social-link-item"><a href="/">Facebook</a></li>
+                <li class="social-link-item"><a href="/">Vkontakte</a></li>
+                <li class="social-link-item"><a href="/">Instagram</a></li>
             </ul>
         </div>
     </footer>
