--- a/html/works.html
+++ b/html/works.html
@@ -5,15 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Works</title>
+    <link rel="stylesheet" href="../css/modern-normalize.css">
+    <link rel="stylesheet" href="../css/works.css">
 </head>
 <body>
-    <header>
-        <a href="../index.html">promomix</a>
-        <nav>
-            <ul>
-                <li><button type="button">поиск</button></li>
-                <li><a href="tel:84964290900">8 496 429 09 00</a></li>
-                <li><button type="button">оставить заявку</button></li>
+    <header class="header">
+        <nav class="navigation container">
+            <a class="logo" href="./index.html"> 
+                <svg width="164" height="20">
+                    <use href="../image/items/icons.svg#promomix"></use>
+                </svg>
+            </a>
+            <ul class="list">
+                <li class="list-item">
+                    <svg class="icon-header" width="16" height="56">
+                        <use href="../image/items/icons.svg#lupa"></use>
+                    </svg>
+                    <button type="button">
+                        поиск
+                    </button>
+                </li>
+                <li class="list-item"><a href="tel:84964290900">8 496 429 09 00</a></li>
+                <li class="list-item"><button type="button">оставить заявку</button></li>
             </ul>
         </nav>
     </header>
@@ -127,40 +140,43 @@
         </section>
     </main>
     <footer>
-        <div>
-            <div>
-                <a href="">Promomix –
-                    рекламное агентство
+        <div class="container container-footer bg-page">
+            <div class="footer-link">
+                <a class="link-title-footer" href="">
+                    <span class="text-title-color">Promomix –</span> <br>
+                    рекламное агентство <br>
                     полного цикла
                 </a>
                 <button type="button">Оставить заявку</button>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="../html/about.html">О компании</a></li>
-                    <li><a href="../html/features.html">Услуги</a></li>
-                    <li><a href="../html/works.html">Наши работы</a></li>
-                    <li><a href="../html/services.html">Сервис</a></li>
-                    <li><a href="../html/complex.html">Комплексные решения</a></li>
-                    <li><a href="../html/posts.html">Статьи и новости</a></li>
-                    <li><a href="../html/about.html">Контакты</a></li>
-                </ul>
-            </nav>
-            <div>
-                <p>Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
-                <form>
-                    <input type="email" placeholder="ваш e-mail">
-                    <!-- <input type="submit" placeholder="&#8594;"> -->
-                    <button type="submit">&#8594;</button>
-                </form>
+            <div class="footer-main">
+                <nav class="navi-footer">
+                    <ul class="list">
+                        <li><a href="./html/about.html">О компании</a></li>
+                        <li><a href="./html/about.html">Услуги</a></li>
+                        <li><a href="./html/works.html">Наши работы</a></li>
+                        <li><a href="./html/services.html">Сервис</a></li>
+                        <li><a href="./html/complex.html">Комплексные решения</a></li>
+                        <li><a href="./html/posts.html">Статьи и новости</a></li>
+                        <li><a href="./html/about.html">Контакты</a></li>
+                    </ul>
+                </nav>
+                <div class="footer-form">
+                    <p>Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
+                    <form>
+                        <input type="email" placeholder="ваш e-mail">
+                        <!-- <input type="submit" placeholder="&#8594;"> -->
+                        <button type="submit">&#8594;</button>
+                    </form>
+                </div>
             </div>
         </div>
-        <div>
+        <div class="container social-link">
             <p>&copy; 2011 - 2020 Promomix</p>
-            <ul>
-                <li><a href="/">Facebook</a></li>
-                <li><a href="/">Vkontakte</a></li>
-                <li><a href="/">Instagram</a></li>
+            <ul class="footer-social-link">
+                <li class="social-link-item"><a href="/">Facebook</a></li>
+                <li class="social-link-item"><a href="/">Vkontakte</a></li>
+                <li class="social-link-item"><a href="/">Instagram</a></li>
             </ul>
         </div>
     </footer>
