--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <li class="directions-items">
                     <a class="directions-icons" href="">
                     <svg  width="55" height="55">
-                        <use href="../image/items/icons.svg#icon-1"></use>
+                        <use href="./image/items/icons.svg#icon-1"></use>
                     </svg> 
                     Наружная реклама
                     </a>
@@ -63,7 +63,7 @@
                 <li class="directions-items">
                     <a class="directions-icons" href="">
                     <svg width="55" height="47">
-                        <use href="../image/items/icons.svg#icon-2"></use>
+                        <use href="./image/items/icons.svg#icon-2"></use>
                     </svg> 
                     Широкоформатная печать
                     </a>
@@ -71,7 +71,7 @@
                 <li class="directions-items">
                     <a class="directions-icons" href="">
                     <svg width="55" height="55">
-                        <use href="../image/items/icons.svg#icon-3"></use>
+                        <use href="./image/items/icons.svg#icon-3"></use>
                     </svg> 
                     Рекламная полиграфия
                     </a>
@@ -79,7 +79,7 @@
                 <li class="directions-items">
                     <a class="directions-icons" href="">
                     <svg width="55" height="52">
-                        <use href="../image/items/icons.svg#icon-4"></use>
+                        <use href="./image/items/icons.svg#icon-4"></use>
                     </svg> 
                     Сувенирная продукция
                     </a>
@@ -87,7 +87,7 @@
                 <li class="directions-items">
                     <a class="directions-icons" href="">
                     <svg width="55" height="50">
-                        <use href="../image/items/icons.svg#icon-5"></use>
+                        <use href="./image/items/icons.svg#icon-5"></use>
                     </svg> 
                     Внутренняя реклама
                     </a>
@@ -95,7 +95,7 @@
                 <li class="directions-items">
                     <a class="directions-icons" href="">
                     <svg width="58" height="53">
-                        <use href="../image/items/icons.svg#icon-7"></use>
+                        <use href="./image/items/icons.svg#icon-7"></use>
                     </svg> 
                     Брендирование одежды
                     </a>
@@ -103,7 +103,7 @@
                 <li class="directions-items">
                     <a class="directions-icons" href="">
                     <svg width="55" height="55">
-                        <use href="../image/items/icons.svg#icon-8"></use>
+                        <use href="./image/items/icons.svg#icon-8"></use>
                     </svg> 
                     Брендирование транспорта
                     </a>
@@ -111,7 +111,7 @@
                 <li class="directions-items">
                     <a class="directions-icons" href="">
                     <svg width="50" height="40">
-                        <use href="../image/items/icons.svg#icon-9"></use>
+                        <use href="./image/items/icons.svg#icon-9"></use>
                     </svg> 
                     Все услуги
                     </a>
@@ -213,7 +213,9 @@
                 </li>
             </ul>
             <a class="link-icon-idea" href="">
-                <img class="icon-idea" src="./image/items/plus.png" alt="">
+                <svg class="icon-idea" width="23" height="23">
+                    <use href="./image/items/icons.svg#icon-plus"></use>
+                </svg>
                 <span></span>
                 Все работы
             </a>
@@ -278,8 +280,8 @@
                             <p class="intresting-paragraph">21. 03. 2020</p>
                             <h3 class="title-page">Уникальная услуга «вывеска в аренду»</h3>
                             <p class="intresting-text">У владельца любого малого, но успешно развивающегося бизнеса рано или поздно возникает необходимость в дополнительной визуальной рекламе.</p>
-                                <img src="./image/items/arrow.png" alt=""> 
-                                <span class="intresting-text-link">Подробнее</span>
+                            <img src="./image/items/arrow.png" alt=""> 
+                            <span class="intresting-text-link">Подробнее</span>
                         </a>
                     </div>
                 </li>
@@ -315,7 +317,9 @@
                 </li>
             </ul>
                 <a class="link-icon-idea" href="">
-                    <img class="icon-idea" src="./image/items/plus.png" alt="">
+                    <svg class="icon-idea" width="23" height="23">
+                        <use href="./image/items/icons.svg#icon-plus"></use>
+                    </svg>
                     <span></span>
                     Все работы
                 </a>
