--- a/index.html
+++ b/index.html
@@ -280,7 +280,9 @@
                             <p class="intresting-paragraph">21. 03. 2020</p>
                             <h3 class="title-page">Уникальная услуга «вывеска в аренду»</h3>
                             <p class="intresting-text">У владельца любого малого, но успешно развивающегося бизнеса рано или поздно возникает необходимость в дополнительной визуальной рекламе.</p>
-                            <img src="./image/items/arrow.png" alt=""> 
+                            <svg width="12" height="8">
+                                <use href="./image/items/icons.svg#icon-arrow"></use>
+                            </svg>
                             <span class="intresting-text-link">Подробнее</span>
                         </a>
                     </div>
@@ -295,7 +297,9 @@
                             <p class="intresting-paragraph">21. 03. 2020</p>
                             <h3 class="title-page">Лайфхаки полиграфии от заказчиков</h3>
                             <p class="intresting-text">Лайфхаки полиграфии от опытных заказчиков. Сегодня услуги по печати рекламных материалов, кажется, не предоставляет только ленивый.  Так как предложений очень много, то, соответственно и достаточно высок.</p>
-                                <img src="./image/items/arrow.png" alt=""> 
+                            <svg width="12" height="8">
+                                <use href="./image/items/icons.svg#icon-arrow"></use>
+                            </svg> 
                                 <span class="intresting-text-link">Подробнее</span>
                         </a>
                     </div>
@@ -310,7 +314,9 @@
                             <p class="intresting-paragraph">21. 03. 2020</p>
                             <h3 class="title-page">Полиграфия для бизнеса</h3>
                             <p class="intresting-text">Чтобы выделиться среди конкурентов на современном рынке товаров и услуг, или познакомить как можно большее количество людей с новым предприятием, нужна эффективная реклама. </p>
-                                <img src="./image/items/arrow.png" alt=""> 
+                            <svg width="12" height="8">
+                                <use href="./image/items/icons.svg#icon-arrow"></use>
+                            </svg> 
                                 <span class="intresting-text-link">Подробнее</span>
                         </a>
                     </div>
