--- a/html/about.html
+++ b/html/about.html
@@ -292,7 +292,9 @@
                     </li>
                 </ul>
                 <a class="link-icon-idea" href="">
-                    <img class="icon-idea" src="../image/items/plus.png" alt="">
+                    <svg class="icon-idea" width="23" height="23">
+                        <use href="../image/items/icons.svg#icon-plus"></use>
+                    </svg>
                     <span></span>
                     Все работы
                 </a>
