--- a/html/polygraphy.html
+++ b/html/polygraphy.html
@@ -31,6 +31,7 @@
         </nav>
     </header>
     <main>
+        <!-- Ключевые направления -->
         <section class="section" >
             <div class="container container-link">
                 <ul class="list directions-list">
