--- a/html/stores.html
+++ b/html/stores.html
@@ -17,12 +17,12 @@
                 </svg>
             </a>
             <ul class="list">
-                <li class="list-item">
-                    <svg class="icon-header" width="16" height="56">
-                        <use href="../image/items/icons.svg#lupa"></use>
-                    </svg>
-                    <button type="button">
-                        поиск
+                <li class="list-item header-item-button">
+                    <button class="" type="button">
+                        <svg class="icon-header" width="16" height="16">
+                            <use href="../image/items/icons.svg#lupa"></use>
+                        </svg>
+                        <p>поиск</p>
                     </button>
                 </li>
                 <li class="list-item"><a href="tel:84964290900">8 496 429 09 00</a></li>
