--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 </svg>
             </a>
             <ul class="list">
-                <li class="list-item">
-                    <svg class="icon-header" width="16" height="56">
-                        <use href="../image/items/icons.svg#lupa"></use>
-                    </svg>
-                    <button type="button">
-                        поиск
+                <li class="list-item header-item-button">
+                    <button class="" type="button">
+                        <svg class="icon-header" width="16" height="16">
+                            <use href="../image/items/icons.svg#lupa"></use>
+                        </svg>
+                        <p>поиск</p>
                     </button>
                 </li>
                 <li class="list-item"><a href="tel:84964290900">8 496 429 09 00</a></li>
@@ -216,8 +216,7 @@
                 <svg class="icon-idea" width="23" height="23">
                     <use href="./image/items/icons.svg#icon-plus"></use>
                 </svg>
-                <span></span>
-                Все работы
+                <p>Все работы</p>
             </a>
         </div>
     </section>
@@ -280,10 +279,12 @@
                             <p class="intresting-paragraph">21. 03. 2020</p>
                             <h3 class="title-page">Уникальная услуга «вывеска в аренду»</h3>
                             <p class="intresting-text">У владельца любого малого, но успешно развивающегося бизнеса рано или поздно возникает необходимость в дополнительной визуальной рекламе.</p>
-                            <svg width="12" height="8">
-                                <use href="./image/items/icons.svg#icon-arrow"></use>
-                            </svg>
-                            <span class="intresting-text-link">Подробнее</span>
+                            <div>
+                                <svg width="12" height="8">
+                                    <use href="./image/items/icons.svg#icon-arrow"></use>
+                                </svg>
+                                <p class="intresting-text-link">Подробнее</p>
+                            </div>
                         </a>
                     </div>
                 </li>
@@ -297,11 +298,13 @@
                             <p class="intresting-paragraph">21. 03. 2020</p>
                             <h3 class="title-page">Лайфхаки полиграфии от заказчиков</h3>
                             <p class="intresting-text">Лайфхаки полиграфии от опытных заказчиков. Сегодня услуги по печати рекламных материалов, кажется, не предоставляет только ленивый.  Так как предложений очень много, то, соответственно и достаточно высок.</p>
-                            <svg width="12" height="8">
-                                <use href="./image/items/icons.svg#icon-arrow"></use>
-                            </svg> 
-                                <span class="intresting-text-link">Подробнее</span>
-                        </a>
+                            <div>
+                                <svg width="12" height="8">
+                                    <use href="./image/items/icons.svg#icon-arrow"></use>
+                                </svg> 
+                                    <p class="intresting-text-link">Подробнее</p>
+                            </div>
+                            </a>
                     </div>
                 </li>
                 <li class="list-item">
@@ -314,10 +317,12 @@
                             <p class="intresting-paragraph">21. 03. 2020</p>
                             <h3 class="title-page">Полиграфия для бизнеса</h3>
                             <p class="intresting-text">Чтобы выделиться среди конкурентов на современном рынке товаров и услуг, или познакомить как можно большее количество людей с новым предприятием, нужна эффективная реклама. </p>
-                            <svg width="12" height="8">
-                                <use href="./image/items/icons.svg#icon-arrow"></use>
-                            </svg> 
-                                <span class="intresting-text-link">Подробнее</span>
+                            <div>
+                                <svg width="12" height="8">
+                                    <use href="./image/items/icons.svg#icon-arrow"></use>
+                                </svg> 
+                                    <p class="intresting-text-link">Подробнее</p>
+                            </div>
                         </a>
                     </div>
                 </li>
@@ -326,14 +331,14 @@
                     <svg class="icon-idea" width="23" height="23">
                         <use href="./image/items/icons.svg#icon-plus"></use>
                     </svg>
-                    <span></span>
-                    Все работы
+                    <p>Все работы</p>
                 </a>
         </div>
     </section>
     </main>
     <footer>
-        <div class="container container-footer bg-page">
+        <section class="section bg-page">
+        <div class="container container-footer">
             <div class="footer-link">
                 <a class="link-title-footer" href="">
                     <span class="text-title-color">Promomix –</span> <br>
@@ -356,22 +361,29 @@
                 </nav>
                 <div class="footer-form">
                     <p>Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
-                    <form>
-                        <input type="email" placeholder="ваш e-mail">
+                    <form class="footer-form-item">
+                        <input type="email" placeholder="ваш e-mail" tabindex="11">
                         <!-- <input type="submit" placeholder="&#8594;"> -->
-                        <button type="submit">&#8594;</button>
+                        <button type="submit">
+                            <svg class="footer-button" width="20" height="14">
+                                <use href="./image/items/icons.svg#icon-arrow"></use>
+                            </svg>
+                        </button>
                     </form>
                 </div>
             </div>
         </div>
-        <div class="container social-link">
-            <p>&copy; 2011 - 2020 Promomix</p>
-            <ul class="footer-social-link">
-                <li class="social-link-item"><a href="/">Facebook</a></li>
-                <li class="social-link-item"><a href="/">Vkontakte</a></li>
-                <li class="social-link-item"><a href="/">Instagram</a></li>
-            </ul>
-        </div>
+        </section>
+        <section class="section">
+            <div class="container social-link">
+                <p>&copy; 2011 - 2020 Promomix</p>
+                <ul class="footer-social-link">
+                    <li class="social-link-item"><a href="/">Facebook</a></li>
+                    <li class="social-link-item"><a href="/">Vkontakte</a></li>
+                    <li class="social-link-item"><a href="/">Instagram</a></li>
+                </ul>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
